--- a/vcbridge-admin/application/src/main/resources/templates/register.html
+++ b/vcbridge-admin/application/src/main/resources/templates/register.html
@@ -19,7 +19,11 @@
 					type="text" class="form-control" placeholder="Last Name"
 					th:field="*{lastName}" required="required" />
 			</div>
-
+			<div class="form-group">
+				<label for="timezone" class="sr-only">Timezone</label> <select
+					id="timezone"
+					th:field="*{timezone}"></select>
+			</div>
 			<div class="form-group">
 				<label for="email" class="sr-only">Email address</label> <input
 					type="email" class="form-control" placeholder="E-mail address"
@@ -45,5 +49,24 @@
 			<br />
 		</form>
 	</div>
+</div>
+<div layout:fragment="scripts">
+<script
+		src="https://cdnjs.cloudflare.com/ajax/libs/selectize.js/0.12.4/js/standalone/selectize.min.js"></script>
+<script>
+	$(document).ready(
+			function() {
+				timezone = moment.tz.names();
+				console.log(timezone);
+				for (var i = 0; i < timezone.length; i++) {
+					$('select').append(
+							'<option value="' + timezone[i] + '">'
+									+ timezone[i] + '</option>');
+				}
+				$('#timezone').selectize({
+					inputClass : 'form-control selectize-input'
+				});
+			});
+</script>
 </div>
 </html>
